src/objects/triggerToggle__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Toggles supported triggers off/on as required.
*Note* Field names must match Trigger name.</description>
    <fields>
        <fullName>AccountTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for Account Trigger</description>
        <inlineHelpText>Toggle for Account Trigger</inlineHelpText>
        <label>AccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseCommentCodeTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for CaseCommentCodeTrigger</description>
        <inlineHelpText>Toggle for CaseCommentCodeTrigger</inlineHelpText>
        <label>CaseCommentCodeTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for CaseContactTrigger__c Trigger</description>
        <inlineHelpText>Toggle for CaseContactTrigger__c Trigger</inlineHelpText>
        <label>CaseContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for Case Trigger</description>
        <inlineHelpText>Toggle for Case Trigger</inlineHelpText>
        <label>CaseTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for Contact Trigger</description>
        <inlineHelpText>Toggle for Contact Trigger</inlineHelpText>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentOrderLineItem__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for FulfillmentOrderLineItem Trigger</description>
        <inlineHelpText>Toggle for FulfillmentOrderLineItem Trigger</inlineHelpText>
        <label>FulfillmentOrderLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for FulfillmentOrder Trigger</description>
        <inlineHelpText>Toggle for FulfillmentOrder Trigger</inlineHelpText>
        <label>FulfillmentOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SafetyAssessmentSurvey__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for SAS Trigger</description>
        <inlineHelpText>Toggle for SAS Trigger</inlineHelpText>
        <label>SafetyAssessmentSurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_EmailMessage__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for EmailMessage Trigger</description>
        <inlineHelpText>Toggle for EmailMessage Trigger</inlineHelpText>
        <label>sf_EmailMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_TaskTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle for Task Trigger</description>
        <inlineHelpText>Toggle for Task Trigger</inlineHelpText>
        <label>sf_TaskTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>triggerToggle</label>
</CustomObject>